--- a/.github/workflows/HIS-ci.yml
+++ b/.github/workflows/HIS-ci.yml
@@ -10,6 +10,16 @@ jobs:
   test:
     name: Test on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:13
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: npg_Io23FZrkzcMt
+          POSTGRES_DB: Surgerydb
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     strategy:
       matrix:
         python-version: ['3.8', '3.9', '3.10', '3.11']
@@ -33,6 +43,7 @@ jobs:
       run: |
         pytest --cov=./ --cov-report=xml
       env:
+        FLASK_APP: app.py
         FLASK_ENV: test
 
     - name: Upload coverage report
@@ -96,4 +107,4 @@ jobs:
       run: |
         python -m flask collectstatic --noinput || echo "No static files to collect"
       env:
-        FLASK_APP: your_app_module.py
+        FLASK_APP: app.py
