--- a/requirements.txt
+++ b/requirements.txt
@@ -43,5 +43,6 @@ cssmin==0.2.0
 jsmin==3.0.1
 
 # Documentation
-Sphinx==7.2.2
+Sphinx==7.1.2  # Latest stable as of Oct 2023
 sphinx-rtd-theme==1.3.0
+myst-parser==2.0.0  # Optional: For Markdown support
