--- a/.github/workflows/surgery-hms-ci.yml
+++ b/.github/workflows/surgery-hms-ci.yml
@@ -1,4 +1,4 @@
-name: HIS CI Pipeline
+name: HMS CI Pipeline
 
 on:
   push:
@@ -10,19 +10,9 @@ jobs:
   test:
     name: Test on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
-    services:
-      postgres:
-        image: postgres:13
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: npg_Io23FZrkzcMt
-          POSTGRES_DB: Surgerydb
-        ports:
-          - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11']
+        python-version: ['3.10', '3.11']
     
     steps:
     - name: Checkout code
@@ -37,14 +27,15 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest pytest-cov flake8 black isort
+        pip install pytest pytest-cov
 
     - name: Run tests with coverage
       run: |
-        pytest --cov=./ --cov-report=xml
+        pytest --cov=app --cov-report=xml
       env:
-        FLASK_APP: app.py
+        FLASK_APP: main.py
         FLASK_ENV: test
+        DATABASE_URL: sqlite:///surgery_department.db
 
     - name: Upload coverage report
       uses: codecov/codecov-action@v3
@@ -74,19 +65,19 @@ jobs:
 
     - name: Run flake8 linter
       run: |
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 app --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 app --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
     - name: Check code formatting with black
       run: |
-        black --check --diff .
+        black --check --diff app
 
     - name: Check import sorting with isort
       run: |
-        isort --check-only --diff .
+        isort --check-only --diff app
 
   build:
-    name: Build and Static Files
+    name: Verify Application Build
     runs-on: ubuntu-latest
     needs: lint
     steps:
@@ -103,8 +94,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Collect static files
+    - name: Verify Flask application
       run: |
-        python -m flask collectstatic --noinput || echo "No static files to collect"
+        python -c "from main import app; print('Application imports successfully')"
       env:
-        FLASK_APP: app.py
+        FLASK_APP: main.py
+        DATABASE_URL: sqlite:///surgery_department.db
