--- a/.github/workflows/surgery-hms-ci.yml
+++ b/.github/workflows/surgery-hms-ci.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Run tests with coverage
       run: |
-        pytest --cov=app --cov-report=xml
+        pytest tests/ --cov=app --cov-report=xml
       env:
         FLASK_APP: main.py
         FLASK_ENV: test
