--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Werkzeug==2.3.7
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
 Flask-Login==0.6.2
+flask_migrate>=4.0.0
 python-dotenv==1.0.0
 
 # Database Support (choose one based on your DB)
