--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask-WTF==1.1.1
 Flask-Login==0.6.2
 flask_migrate>=4.0.0
 python-dotenv==1.0.0
+flask-jwt-extended>=4.5.3
 
 # Database Support (choose one based on your DB)
 # PostgreSQL
