--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ flask-jwt-extended>=4.5.3
 # Database Support (choose one based on your DB)
 # PostgreSQL
 psycopg2-binary==2.9.6
+asyncpg
 
 # Security
 bcrypt==4.0.1
